# apex-test

./: .coverage  .env  Dockerfile  Makefile  README.md  TEST.postman_collection.json  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: main.py
app/adapters/input/: api.py  weather_api.py
app/adapters/output/: repository.py
app/application/ports/: output_port.py
app/application/services/: product_service.py
app/core/: config.py
app/domain/entities/: product.py
app/infrastructure/database/: database.py  models.py  mongodb_repository.py
app/infrastructure/external_services/: openweather_client.py
tests/unit/: test_database.py  test_service.py  test_weather.py
