[tool.poetry]
name = "api-ecommerce"
version = "0.1.0"
description = "FastAPI project with hexagonal architecture"
authors = ["Sebastian Noreña <your_email@example.com>"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
starlette = ">=0.27.0,<0.28.0"
uvicorn = "^0.22.0"
sqlalchemy = "^1.4.0"
requests = "^2.28.0"
pymongo = "^4.4.0"
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
mongomock = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.20.3"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
